@@ -1,3 +1,7 @@
+2006-01-05  Michael Gerdau  <mgd@technosis.de>
+
+	* include/winbase.h (WINADVAPI): Define.
+
 2006-01-03  Christopher Faylor  <cgf@timesys.com>
 
 	* include/winuser.h (CreateWindowStation): Correctly identify first
